2009-06-13  John Abd-El-Malek  <jam@chromium.org>

        Reviewed by Eric Seidel.  Landed by Adam Barth.

        Removed dead file.
        https://bugs.webkit.org/show_bug.cgi?id=26308

        * DumpRenderTree/win/TestNetscapePlugin/main.c: Removed.

2009-06-12  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Gustavo Noronha.

        [Gtk] use strlen instead of g_utf8_strlen so we can enable more tests.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (dumpHistoryItem):

2009-06-12  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Jan Alonzo.

        https://bugs.webkit.org/show_bug.cgi?id=25599
        [GTK] Enable more tests

        Implement dumping of status callback.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (webViewStatusBarTextChanged):
        (main):

2009-06-11  John Abd-El-Malek  <jam@chromium.org>

        Reviewed by Steve Falkenburg.

        https://bugs.webkit.org/show_bug.cgi?id=26306

        Revert 42565 as it leads to DumpRenderTree crashing on startup because
        Windows can't find CFURLCacheCopySharedURLCache in CoreNetwork.dll.

        * DumpRenderTree/win/DumpRenderTree.cpp:

2009-06-10  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Jan Alonzo.

        [gtk] Change DumpRenderTree to use a GtkScrolledWindow instead of GtkFixed

        Change the code to use GtkScrolledWindow and resize the GtkScrolledWindow
        to pass more tests. Make sure the content is bigger than a thumbnail.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (runTest):
        (main):

2009-06-10  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Gustavo Noronha.

        Clear the frame name before we run each tests so we don't get
        "someFloaString" or "3" in the target frame name.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (resetWebViewToConsistentStateBeforeTesting):

2009-06-10  Dan Bernstein  <mitz@apple.com>
