@@ -1,5 +1,13 @@
-# From WebKit svn r24249 (WebCore/css/CSSPropertyNames.in)
+# From WebKit svn r44659 (WebCore/css/CSSPropertyNames.in)
+-webkit-animation
+-webkit-animation-delay
+-webkit-animation-direction
+-webkit-animation-duration
+-webkit-animation-iteration-count
+-webkit-animation-name
+-webkit-animation-timing-function
 -webkit-appearance
+-webkit-backface-visibility
 -webkit-background-clip
 -webkit-background-composite
 -webkit-background-origin
@@ -22,6 +30,7 @@
 -webkit-box-ordinal-group
 -webkit-box-orient
 -webkit-box-pack
+-webkit-box-reflect
 -webkit-box-shadow
 -webkit-box-sizing
 -webkit-column-break-after
@@ -35,7 +44,6 @@
 -webkit-column-rule-width
 -webkit-column-width
 -webkit-columns
--webkit-dashboard-region
 -webkit-font-size-delta
 -webkit-highlight
 -webkit-line-break
@@ -50,9 +58,25 @@
 -webkit-marquee-repetition
 -webkit-marquee-speed
 -webkit-marquee-style
+-webkit-mask
+-webkit-mask-attachment
+-webkit-mask-box-image
+-webkit-mask-clip
+-webkit-mask-composite
+-webkit-mask-image
+-webkit-mask-origin
+-webkit-mask-position
+-webkit-mask-position-x
+-webkit-mask-position-y
+-webkit-mask-repeat
+-webkit-mask-size
 -webkit-match-nearest-mail-blockquote-color
 -webkit-nbsp-mode
 -webkit-padding-start
+-webkit-perspective
+-webkit-perspective-origin
+-webkit-perspective-origin-x
+-webkit-perspective-origin-y
 -webkit-rtl-ordering
 -webkit-text-decorations-in-effect
 -webkit-text-fill-color
@@ -61,9 +85,21 @@
 -webkit-text-stroke
 -webkit-text-stroke-color
 -webkit-text-stroke-width
+-webkit-transform
+-webkit-transform-origin
+-webkit-transform-origin-x
+-webkit-transform-origin-y
+-webkit-transform-origin-z
+-webkit-transform-style
+-webkit-transition
+-webkit-transition-delay
+-webkit-transition-duration
+-webkit-transition-property
+-webkit-transition-timing-function
 -webkit-user-drag
 -webkit-user-modify
 -webkit-user-select
+-webkit-variable-declaration-block
 background
 background-attachment
 background-color
@@ -150,18 +186,13 @@ page
 page-break-after
 page-break-before
 page-break-inside
+pointer-events
 position
 quotes
 resize
 right
-scrollbar-3dlight-color
-scrollbar-arrow-color
-scrollbar-darkshadow-color
-scrollbar-face-color
-scrollbar-highlight-color
-scrollbar-shadow-color
-scrollbar-track-color
 size
+src
 table-layout
 text-align
 text-decoration
@@ -186,6 +217,7 @@ text-underline-style
 text-underline-width
 top
 unicode-bidi
+unicode-range
 vertical-align
 visibility
 white-space
@@ -195,6 +227,7 @@ word-break
 word-spacing
 word-wrap
 z-index
+zoom
 
 # CSS3 properties - http://www.css3.info/preview/
 background-clip
